--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,6 @@
 }
 
 .card:hover {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
   transform: translateY(-2px);
 }
 
@@ -58,7 +57,6 @@
   position: absolute;
   width: 250px;
   background-color: #e7ecef;
-  border-radius: 10px;
   margin-top: 10px;
   z-index: 10;
 }
@@ -91,9 +89,8 @@
   align-items: flex-start;
   gap: 20px;
   flex-wrap: wrap;
-  background: #ced4da;
+  background: #e2e5eb;
   padding: 5px 10px;
-  border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
 }
 
